@@ -4,6 +4,7 @@ import com.gstdev.cloud.data.core.enums.DataItemStatus;
 import com.gstdev.cloud.data.core.service.BaseServiceImpl;
 import com.gstdev.cloud.service.system.domain.entity.*;
 import com.gstdev.cloud.service.system.domain.enums.SysAccountType;
+import com.gstdev.cloud.service.system.domain.enums.SysUserType;
 import com.gstdev.cloud.service.system.domain.pojo.sysMenu.AccountMenuPermissionsDto;
 import com.gstdev.cloud.service.system.domain.pojo.sysMenu.AccountMenuPermissionsQO;
 import com.gstdev.cloud.service.system.domain.pojo.sysMenu.InsertMenuManageIO;
@@ -15,6 +16,8 @@ import jakarta.annotation.Resource;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -69,22 +72,78 @@ public class SysMenuServiceImpl extends BaseServiceImpl<SysMenu, String, SysMenu
     }
 
     @Override
+    public List<String> getPermissionsByMenuIds(Set<String> menuIds) {
+        List<SysMenu> menus = menuRepository.findAllById(menuIds);
+        return getService().getPermissionsByMenus(menus);
+    }
+
+    @Override
+    public List<String> getPermissionsByMenus(List<SysMenu> menus) {
+        Map<String, Set<String>> attributeMaps = new HashMap<>();
+        // 处理菜单根据menuId去重
+        menus.stream().collect(Collectors.toMap(SysMenu::getId, menu -> menu, (key1, key2) -> key1));
+        // 处理菜单的属性并进行分组
+        menus.forEach(sysMenu -> {
+            sysMenu.getAttributes().stream()
+                    .collect(Collectors.groupingBy(SysAttribute::getServiceId))
+                    .forEach((serviceId, attributes) -> {
+                        Set<String> sysAttributes = attributeMaps.getOrDefault(serviceId, new HashSet<>());
+                        sysAttributes.addAll(attributes.stream().map(SysAttribute::getAttributeId).collect(Collectors.toSet()));
+                        attributeMaps.put(serviceId, sysAttributes);
+                    });
+        });
+        List<String> collect = new ArrayList<>();
+        // 将分组后的属性ID集合生成权限并添加到权限集合中
+        for (Set<String> value : attributeMaps.values()) {
+            collect.add(generateKey(new ArrayList<>(value)));
+        }
+        return collect;
+    }
+
+    public static String generateKey(List<String> input) {
+        // 对字符串列表进行排序
+        Collections.sort(input);
+        // 连接排序后的字符串
+        String combinedInput = String.join("", input);
+        try {
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] hash = digest.digest(combinedInput.getBytes());
+            StringBuilder hexString = new StringBuilder();
+            for (byte b : hash) {
+                String hex = Integer.toHexString(0xff & b);
+                if (hex.length() == 1) {
+                    hexString.append('0');
+                }
+                hexString.append(hex);
+            }
+            return hexString.toString();
+        } catch (NoSuchAlgorithmException e) {
+            e.printStackTrace();
+            return null;
+        }
+
+    }
+    @Override
     public List<AccountMenuPermissionsDto> getAccountMenuPermissions(String accountId) {
         SysAccount account = accountRepository.findById(accountId).get();
         AccountMenuPermissionsQO accountMenuPermissionsQO = new AccountMenuPermissionsQO();
         List<SysMenu> sysMenuList = new ArrayList<>();
-        if (account.getType().equals(SysAccountType.SUPER)) {
+        SysUser user = account.getUser();
+        if (user.getType().equals(SysUserType.SUPER)) {
             sysMenuList = service.findAll();
-        } else if (account.getType().equals(SysAccountType.ADMIN)) {
-            sysMenuList = findAllMenuByTenantId(account.getTenantId());
-        } else if (account.getType().equals(SysAccountType.USER)) {
-            Map<String, SysMenu> collect = new HashMap<>();
-            for (SysRole role : account.getRoles()) {
-                Map<String, SysMenu> collect1 = role.getTenantMenus().stream().map(SysTenantMenu::getMenu).collect(Collectors.groupingBy(SysMenu::getId,
-                    Collectors.collectingAndThen(Collectors.toList(), value -> value.get(0))));
-                collect.putAll(collect1);
+        }
+        if (user.getType().equals(SysUserType.USER)) {
+            if (account.getType().equals(SysAccountType.ADMIN)) {
+                sysMenuList = findAllMenuByTenantId(account.getTenantId());
+            } else if (account.getType().equals(SysAccountType.USER)) {
+                Map<String, SysMenu> collect = new HashMap<>();
+                for (SysRole role : account.getRoles()) {
+                    Map<String, SysMenu> collect1 = role.getTenantMenus().stream().map(SysTenantMenu::getMenu).collect(Collectors.groupingBy(SysMenu::getId,
+                            Collectors.collectingAndThen(Collectors.toList(), value -> value.get(0))));
+                    collect.putAll(collect1);
+                }
+                sysMenuList = collect.values().stream().toList();
             }
-            sysMenuList = collect.values().stream().toList();
         }
         sysMenuList = sysMenuList.stream().filter(sysMenu -> sysMenu.getStatus().equals(DataItemStatus.ENABLE)).toList();
         return getMapper().toAccountMenuPermissionsDtoToTree(sysMenuList);
